--- a/templates/sales.html
+++ b/templates/sales.html
@@ -11,7 +11,7 @@
         <thead>
             <tr>
                 <th>ID</th>
-                <th>PRODUCT_ID</th>
+                <th>PRODUCT_NAME</th>
                 <th>QUANTITY</th>
                 <th>CREATED_AT</th>
             </tr>
