--- a/templates/products.html
+++ b/templates/products.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="//cdn.datatables.net/2.1.8/css/dataTables.dataTables.min.css"/>
 </head>
 <body>
     <h1>The Following Products are available:</h1>
-    <table border="">
+    <table border="" id ="mytable">
         <thead>
             <tr>
                 <th>ID</th>
@@ -32,5 +33,14 @@
     </table>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita non voluptatibus est reprehenderit dignissimos ratione, quam sint molestias assumenda dolorum quaerat aut ad, tempora laboriosam excepturi magni vitae maiores qui.
     Omnis dolorem ex numquam deleniti vero nam, a mollitia accusamus laudantium, sint ratione consequatur laboriosam labore animi sapiente vel dicta. Repellat dicta sit, dolores beatae reprehenderit tempora officia autem eos!</p>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    
+    <script src="//cdn.datatables.net/2.1.8/js/dataTables.min.js"></script>
+    
+    <script>
+        let table = new DataTable('#mytable');
+    </script>
+
 </body>
 </html>
