--- a/templates/products.html
+++ b/templates/products.html
@@ -2,95 +2,61 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="//cdn.datatables.net/2.1.8/css/dataTables.dataTables.min.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+
+  <link rel="stylesheet" href="//cdn.datatables.net/2.1.8/css/dataTables.dataTables.min.css" />
 
 </head>
 
 <body>
-  <!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-    Add Product
-  </button>
-  
-  <!-- Modal -->
-  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          ..
-          <form action="/products" method="POST">
-            <div class="mb-3">
-              <label for="exampleInputEmail1" class="form-label">Name </label>
-              <input type="text" class="form-control" id="productname" aria-describedby="emailHelp" name="productname">
-            </div>
-            <div class="mb-3">
-              <label for="exampleInputPassword1" class="form-label">Buying_Price</label>
-              <input type="number" class="form-control" id="buyingprice" name="buyingprice">
-            </div>
-            <div class="mb-3">
-                <label for="exampleInputPassword1" class="form-label">Selling_Price</label>
-                <input type="number" class="form-control" id="sellingprice" name="sellingprice">
-            </div>
-            <div class="mb-3">
-                <label for="exampleInputPassword1" class="form-label">Stock_Quantity</label>
-                <input type="number" class="form-control" id="stockquantity" name="stockquantity">
-            </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
-          </form>.
-        </div>
-      </div>
-    </div>
-  </div>
-    <h1>The Following Products are available:</h1>
-    <table border="" id="mytable">
-        <thead>
-            <tr>
-                <th>ID</th>
-                <th>NAME</th>
-                <th>BUYING_PRICE</th>
-                <th>SELLING_PRICE</th>
-                <th>STOCK_QUANTITY</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for p in myproducts %}
-            <tr>
-                <td>{{ p[0] }}</td>
-                <td>{{ p[1] }}</td>
-                <td>{{ p[2] }}</td>
-                <td>{{ p[3] }}</td>
-                <td>{{ p[4] }}</td>
-            </tr>
-            {% endfor %}
-
-        </tbody>
-    </table>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita non voluptatibus est reprehenderit dignissimos
-        ratione, quam sint molestias assumenda dolorum quaerat aut ad, tempora laboriosam excepturi magni vitae maiores
-        qui.
-        Omnis dolorem ex numquam deleniti vero nam, a mollitia accusamus laudantium, sint ratione consequatur laboriosam
-        labore animi sapiente vel dicta. Repellat dicta sit, dolores beatae reprehenderit tempora officia autem eos!</p>
-
+  <h1>Add A Product</h1>
+  <form action="/products" method="POST">
     
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
+      <label for="exampleInputEmail1" >Name </label>
+      <input type="text"  id="productname" aria-describedby="emailHelp" name="productname">    
+    
+      <label for="exampleInputPassword1" >Buying_Price</label>
+      <input type="number"  id="buyingprice" name="buyingprice">    
+    
+      <label for="exampleInputPassword1" >Selling_Price</label>
+      <input type="number"  id="sellingprice" name="sellingprice"> 
+    
+      <label for="exampleInputPassword1" >Stock_Quantity</label>
+      <input type="number"  id="stockquantity" name="stockquantity">
+    <button type="submit" class="btn btn-primary">Submit</button>
+  </form>.
 
-    <script src="//cdn.datatables.net/2.1.8/js/dataTables.min.js"></script>
+  <h1>The Following Products are available:</h1>
+  <table border="" id="mytable">
+    <thead>
+      <tr>
+        <th>ID</th>
+        <th>NAME</th>
+        <th>BUYING_PRICE</th>
+        <th>SELLING_PRICE</th>
+        <th>STOCK_QUANTITY</th>
+      </tr>
+    </thead>
+    <tbody>
+      {% for p in myproducts %}
+      <tr>
+        <td>{{ p[0] }}</td>
+        <td>{{ p[1] }}</td>
+        <td>{{ p[2] }}</td>
+        <td>{{ p[3] }}</td>
+        <td>{{ p[4] }}</td>
+      </tr>
+      {% endfor %}
 
-    <script>
-        let table = new DataTable('#mytable');
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
+    </tbody>
+  </table>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+  <script src="//cdn.datatables.net/2.1.8/js/dataTables.min.js"></script>
+  <script>
+    let table = new DataTable('#mytable');
+  </script>
 </body>
 
 </html>
