--- a/templates/products.html
+++ b/templates/products.html
@@ -55,7 +55,11 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <script src="//cdn.datatables.net/2.1.8/js/dataTables.min.js"></script>
   <script>
-    let table = new DataTable('#mytable');
+    $(document).ready(function () {
+      $('#mytable').DataTable({
+          "order": [[0, "desc"]] // Order by the first column (index 0) in descending order
+      });
+  });
   </script>
 </body>
 
