Updated With Register and Login

--- a/templates/sales.html
+++ b/templates/sales.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <form action="" method="POST">
+    <form action="/sales" method="POST">
         <label for="" >PRODUCT_ID</label>
         <select name="pid" id="pid">
             {% for p in myproducts %}
